// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notes Page matches snapshot 1`] = `
<div>
  <div
    class="sc-fzoXzr jphFpM"
  >
    <h1
      class="sc-fzpjYC lnMTjC"
    >
      Notes
    </h1>
    <div
      class="sc-fznxsB cvPTFV"
    >
      <div
        class="sc-fznJRM fUFvhP"
      >
        <div
          class="sc-fznWqX cfsIUA"
        >
          <div
            class="MuiInputBase-root MuiInput-root"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="notes-view"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="notes-view"
              role="button"
              tabindex="0"
            >
              All
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="all"
            />
            <svg
              class="MuiSelect-icon"
            >
              chevron.svg
            </svg>
          </div>
        </div>
        <h3
          class="sc-fzoiQi FHcDk"
        >
          5
        </h3>
      </div>
      <div
        class="sc-fzqARJ irCVwi"
      >
        <svg
          class="settings-icon"
        >
          settings.svg
        </svg>
        <div
          class="sc-AxjAm khxSQh"
        >
          <h2
            class="sc-AxiKw jzoYkp"
          >
            Settings
          </h2>
          <div
            class="sc-AxhCb iGvJwE"
          >
            <div
              class="sc-AxgMl ibGeUx"
            >
              <label
                class="sc-AxheI btNIfl"
                for="sort-by"
              >
                Sort by
              </label>
              <div
                class="sc-Axmtr dWIuPP"
              >
                <div
                  class="MuiInputBase-root MuiInput-root"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="sort-by"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                    id="sort-by"
                    role="button"
                    tabindex="0"
                  >
                    Date
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    tabindex="-1"
                    value="date"
                  />
                  <svg
                    class="MuiSelect-icon"
                  >
                    chevron.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="sc-AxgMl ibGeUx"
            >
              <label
                class="sc-AxheI btNIfl"
                for="font-size"
              >
                Font size
              </label>
              <div
                class="sc-Axmtr dWIuPP"
              >
                <div
                  class="MuiInputBase-root MuiInput-root"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="font-size"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                    id="font-size"
                    role="button"
                    tabindex="0"
                  >
                    Medium
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    tabindex="-1"
                    value="medium"
                  />
                  <svg
                    class="MuiSelect-icon"
                  >
                    chevron.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="sc-AxgMl ibGeUx"
            >
              <label
                class="sc-AxheI btNIfl"
              >
                Tags
              </label>
              <div
                class="sc-AxmLO fFgNoy"
              >
                <div
                  class="sc-AxhUy kRHjcT single-tag"
                  color="#F44336"
                >
                  <span>
                    Primary
                  </span>
                </div>
                <div
                  class="sc-AxhUy gESsUG single-tag"
                  color="#E91E63"
                >
                  <span>
                    Secondary
                  </span>
                </div>
                <div
                  class="sc-AxhUy hEWzsc single-tag"
                  color="#607D8B"
                >
                  <span>
                    Studies
                  </span>
                </div>
                <div
                  class="sc-AxhUy kIetSe single-tag"
                  color="#00BCD4"
                >
                  <span>
                    School
                  </span>
                </div>
                <div
                  class="sc-AxhUy xeezF single-tag"
                  color="#3F51B5"
                >
                  <span>
                    Random
                  </span>
                </div>
                <div
                  class="sc-AxhUy ktyFwq single-tag"
                  color="#9C27B0"
                >
                  <span>
                    Work
                  </span>
                </div>
                <div
                  class="sc-AxhUy gdgqSe single-tag"
                  color="#FF9800"
                >
                  <span>
                    Coding
                  </span>
                </div>
                <div
                  class="sc-AxhUy glbvAi single-tag"
                  color="#4CAF50"
                >
                  <span>
                    Stuff
                  </span>
                </div>
                <span
                  class="sc-fzpans eLxAbI"
                >
                  <svg>
                    plus.svg
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-AxirZ gpexXZ"
        />
      </div>
    </div>
    <section
      class="sc-fzqNqU cgxesj"
    >
      <article
        class="sc-fzplWN fBwfkr"
      >
        <a
          href="/notes/1"
        >
          <div
            class="sc-fznyAO lkMwHr"
          >
            <div>
              <h5
                class="sc-fznKkj cEaWPO"
              >
                Lista de compras
              </h5>
              <p
                class="sc-fznZeY kCMyLg"
              >
                20 Jul
              </p>
            </div>
            <div
              class="sc-fzqBZW fqzjjU"
            >
              <div
                class="sc-AxhUy kRHjcT single-tag"
                color="#F44336"
              >
                <span>
                  Primary
                </span>
              </div>
              <div
                class="sc-AxhUy gESsUG single-tag"
                color="#E91E63"
              >
                <span>
                  Secondary
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="sc-fzplWN fBwfkr"
      >
        <a
          href="/notes/2"
        >
          <div
            class="sc-fznyAO lkMwHr"
          >
            <div>
              <h5
                class="sc-fznKkj cEaWPO"
              >
                Apontamentos aula
              </h5>
              <p
                class="sc-fznZeY kCMyLg"
              >
                25 Jun
              </p>
            </div>
            <div
              class="sc-fzqBZW fqzjjU"
            >
              <div
                class="sc-AxhUy kIetSe single-tag"
                color="#00BCD4"
              >
                <span>
                  School
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="sc-fzplWN fBwfkr"
      >
        <a
          href="/notes/3"
        >
          <div
            class="sc-fznyAO lkMwHr"
          >
            <div>
              <h5
                class="sc-fznKkj cEaWPO"
              >
                Random shit
              </h5>
              <p
                class="sc-fznZeY kCMyLg"
              >
                15 Jul
              </p>
            </div>
            <div
              class="sc-fzqBZW fqzjjU"
            >
              <div
                class="sc-AxhUy xeezF single-tag"
                color="#3F51B5"
              >
                <span>
                  Random
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="sc-fzplWN fBwfkr"
      >
        <a
          href="/notes/4"
        >
          <div
            class="sc-fznyAO lkMwHr"
          >
            <div>
              <h5
                class="sc-fznKkj cEaWPO"
              >
                Work shit
              </h5>
              <p
                class="sc-fznZeY kCMyLg"
              >
                15 Jul
              </p>
            </div>
            <div
              class="sc-fzqBZW fqzjjU"
            >
              <div
                class="sc-AxhUy ktyFwq single-tag"
                color="#9C27B0"
              >
                <span>
                  Work
                </span>
              </div>
              <div
                class="sc-AxhUy gdgqSe single-tag"
                color="#FF9800"
              >
                <span>
                  Coding
                </span>
              </div>
              <div
                class="sc-AxhUy glbvAi single-tag"
                color="#4CAF50"
              >
                <span>
                  Stuff
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="sc-fzplWN fBwfkr"
      >
        <a
          href="/notes/5"
        >
          <div
            class="sc-fznyAO lkMwHr"
          >
            <div>
              <h5
                class="sc-fznKkj cEaWPO"
              >
                Post 129
              </h5>
              <p
                class="sc-fznZeY kCMyLg"
              >
                03 Aug
              </p>
            </div>
            <div
              class="sc-fzqBZW fqzjjU"
            />
          </div>
        </a>
      </article>
    </section>
  </div>
</div>
`;

exports[`NotesSettings matches snashot 1`] = `
<div>
  <svg
    class="settings-icon"
  >
    settings.svg
  </svg>
  <div
    class="sc-AxjAm khxSQh"
  >
    <h2
      class="sc-AxiKw jzoYkp"
    >
      Settings
    </h2>
    <div
      class="sc-AxhCb iGvJwE"
    >
      <div
        class="sc-AxgMl ibGeUx"
      >
        <label
          class="sc-AxheI btNIfl"
          for="sort-by"
        >
          Sort by
        </label>
        <div
          class="sc-Axmtr dWIuPP"
        >
          <div
            class="MuiInputBase-root MuiInput-root"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="sort-by"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="sort-by"
              role="button"
              tabindex="0"
            >
              Date
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="date"
            />
            <svg
              class="MuiSelect-icon"
            >
              chevron.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-AxgMl ibGeUx"
      >
        <label
          class="sc-AxheI btNIfl"
          for="font-size"
        >
          Font size
        </label>
        <div
          class="sc-Axmtr dWIuPP"
        >
          <div
            class="MuiInputBase-root MuiInput-root"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="font-size"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="font-size"
              role="button"
              tabindex="0"
            >
              Medium
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="medium"
            />
            <svg
              class="MuiSelect-icon"
            >
              chevron.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-AxgMl ibGeUx"
      >
        <label
          class="sc-AxheI btNIfl"
        >
          Tags
        </label>
        <div
          class="sc-AxmLO fFgNoy"
        >
          <div
            class="sc-AxhUy kRHjcT single-tag"
            color="#F44336"
          >
            <span>
              Primary
            </span>
          </div>
          <div
            class="sc-AxhUy gESsUG single-tag"
            color="#E91E63"
          >
            <span>
              Secondary
            </span>
          </div>
          <div
            class="sc-AxhUy hEWzsc single-tag"
            color="#607D8B"
          >
            <span>
              Studies
            </span>
          </div>
          <div
            class="sc-AxhUy kIetSe single-tag"
            color="#00BCD4"
          >
            <span>
              School
            </span>
          </div>
          <div
            class="sc-AxhUy xeezF single-tag"
            color="#3F51B5"
          >
            <span>
              Random
            </span>
          </div>
          <div
            class="sc-AxhUy ktyFwq single-tag"
            color="#9C27B0"
          >
            <span>
              Work
            </span>
          </div>
          <div
            class="sc-AxhUy gdgqSe single-tag"
            color="#FF9800"
          >
            <span>
              Coding
            </span>
          </div>
          <div
            class="sc-AxhUy glbvAi single-tag"
            color="#4CAF50"
          >
            <span>
              Stuff
            </span>
          </div>
          <span
            class="sc-fzpans eLxAbI"
          >
            <svg>
              plus.svg
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-AxirZ gpexXZ"
  />
</div>
`;

exports[`SingleNote matches snapshot 1`] = `
<div>
  <article
    class="sc-fzplWN fBwfkr"
  >
    <a
      href="/notes/1"
    >
      <div
        class="sc-fznyAO lkMwHr"
      >
        <div>
          <h5
            class="sc-fznKkj cEaWPO"
          >
            Lista de compras
          </h5>
          <p
            class="sc-fznZeY kCMyLg"
          >
            20 Jul
          </p>
        </div>
        <div
          class="sc-fzqBZW fqzjjU"
        >
          <div
            class="sc-AxhUy kRHjcT single-tag"
            color="#F44336"
          >
            <span>
              Primary
            </span>
          </div>
          <div
            class="sc-AxhUy gESsUG single-tag"
            color="#E91E63"
          >
            <span>
              Secondary
            </span>
          </div>
        </div>
      </div>
    </a>
  </article>
</div>
`;
